--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_contact_picker">ContactPicker</string>
     <string name="title_activity_sos">SOSActivity</string>
+    <string name="title_activity_contacts_list">ContactsList</string>
 
 </resources>
