--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_contact_picker">ContactPicker</string>
     <string name="title_activity_sos">SOSActivity</string>
     <string name="title_activity_contacts_list">ContactsList</string>
+    <string name="title_activity_contact">ContactActivity</string>
 
 </resources>
