--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="app_name">Safe</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="add_contacts">Add Contacts</string>
     <string name="title_activity_contact_picker">ContactPicker</string>
     <string name="title_activity_sos">SOSActivity</string>
     <string name="title_activity_contacts_list">ContactsList</string>
     <string name="title_activity_contact">ContactActivity</string>
+    <string name="title_activity_front_screen">FrontScreen</string>
 
 </resources>
